--- a/app/src/main/res/layout/new_point_dialog_layout.xml
+++ b/app/src/main/res/layout/new_point_dialog_layout.xml
@@ -47,7 +47,7 @@
             android:id="@+id/edit_text_temperature"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal|numberSigned" />
+            android:inputType="numberSigned|number" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
